<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/agentsDetailsIv"
                android:layout_width="match_parent"
                android:layout_height="440dp"
                android:layout_margin="8dp"
                android:src="@color/secondary"
                android:background="@color/secondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ImageViewCorner" />

            <TextView
                android:id="@+id/agentsDetailsNameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_extra_blod"
                android:text="@string/grid_item_test_text"
                android:textAlignment="center"
                android:textColor="@color/background"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/agentsDetailsRoleTv"
                app:layout_constraintEnd_toEndOf="@+id/agentsDetailsIv"
                app:layout_constraintStart_toStartOf="@+id/agentsDetailsIv" />

            <TextView
                android:id="@+id/agentsDetailsRoleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/gilroy_extra_blod"
                android:text="@string/agents_details_test_role"
                android:textAlignment="center"
                android:textColor="@color/background"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/agentsDetailsIv"
                app:layout_constraintEnd_toEndOf="@+id/agentsDetailsIv"
                app:layout_constraintStart_toStartOf="@+id/agentsDetailsIv" />

            <TextView
                android:id="@+id/topDescriptionTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/gilroy_extra_blod"
                android:text="@string/description"
                android:textAlignment="center"
                android:textColor="@color/secondary"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/agentsDetailsIv" />

            <TextView
                android:id="@+id/descriptionTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:fontFamily="@font/gilroy_extra_blod"
                android:text="@string/test_description_txt"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topDescriptionTv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/agentsDetailsRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTv"
                app:layout_constraintEnd_toEndOf="parent"
                tools:listitem="@layout/agents_details_item"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="vertical"
                tools:itemCount="4"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>